Fix search_after field values
Closes #2678